<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.Activities.SignUpActivity">

    <ScrollView
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">


        <TextView
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/hello"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textStyle="bold"
            android:text="@string/register_to_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="textCapWords"
            android:id="@+id/user_name"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_text_selector"
            android:padding="10dp"
            android:hint="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/email"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_selector"
            android:padding="10dp"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:background="@drawable/edit_text_selector"
            android:padding="10dp"
            android:hint="@string/password"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/password_repeat"
            android:background="@drawable/edit_text_selector"
            android:padding="10dp"
            android:hint="@string/password"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:onClick="Signup"
            android:text="@string/signup"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    </LinearLayout>
    </ScrollView>

</RelativeLayout>