<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:layout_above="@+id/center_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="80dp"
        android:id="@+id/center_box"
        android:layout_centerInParent="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <Button
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:onClick="loginPage"
        android:text="@string/login"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:onClick="signupPage"
        android:text="@string/signup"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/name"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:text="@string/by_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</RelativeLayout>